# netflix-data

./: .Dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Readme.md  devbox.json  docker-compose.yml  pyproject.toml  requirements.txt  start
great_expectations/: great_expectations.yml
great_expectations/expectations/: silver_netflix_suite.json  silver_weather_suite.json
gx/: great_expectations.yml
gx/checkpoints/: .ge_store_backend_id  silver_checkpoint.yml
gx/expectations/: .ge_store_backend_id  silver_weather_suite.json
src/scripts/: main.py
src/scripts/dashboard/: Dockerfile  app.py
src/scripts/extracao_parquet/: extracao_bronze.py
src/scripts/load_parquet/: load_parquet.py
src/scripts/transform_parquet/: transform_silver.py
